--- a/Main/Views/Users/Create.cshtml
+++ b/Main/Views/Users/Create.cshtml
@@ -21,7 +21,7 @@
 
 
         <div class="card">
-            <div class="card-header">
+            <div class="card-header" style="background-color:rgb(76, 208, 53);color:white">
                 <h3 class="panel-title">
                     @Resources.General.InfoUsers
                 </h3>
@@ -53,11 +53,11 @@
                     </div>
                 </div>
                 <div class='form-group row'>
-                    <div class="col-sm-2">
+                    <div class="control-label col-sm-2">
 
                     </div>
-                    <div class="col-sm-8">
-                        @Html.HjSubmit("btnsubmit", Resources.General.Save, "btn btn-primary ")
+                    <div class="col-sm-10">
+                        <input type="submit" value="ذخیره" class="btn btn-primary " />
                     </div>
                 </div>
 
