--- a/Main/Views/Account/Login.cshtml
+++ b/Main/Views/Account/Login.cshtml
@@ -7,31 +7,31 @@
 @using (Html.BeginForm(actionName:"Login",controllerName:"Account"))
 {
     <div class="form-horizontal">
-        <h4>@Resources.General.Login</h4>
+   
         <hr />
 
         <div class="card " >
-            <div class="card-header">
+            <div class="card-header" style="background-color:rgb(76, 208, 53);color:white">
                 @Resources.General.Login
             </div>
             <div class="card-body ">
                
                 <div class="form-group row">
 
-                    <label class="control-label col-md-2"> @Html.ActionLink("ثبت نام", MVC.Users.Create())</label>
+                    <label class="control-label col-sm-2"> @Html.ActionLink("ثبت نام", MVC.Users.Create())</label>
                  <br />
                 </div>
                 <div class="form-group row">
 
-                    <label class="control-label col-md-2">@Resources.General.UserName</label>
-                    <div class="col-md-10">
+                    <label class="control-label col-sm-2">@Resources.General.UserName</label>
+                    <div class="col-sm-10">
                         <input name="username" id="username" class="form-control " />
                     </div>
                 </div>
 
                 <div class="form-group row">
-                    <label class="control-label col-md-2">@Resources.General.Password</label>
-                    <div class="col-md-10">
+                    <label class="control-label col-sm-2">@Resources.General.Password</label>
+                    <div class="col-sm-10">
                         <input name="password" id="password" class="form-control " type="password" /><span style="color:red">@ViewBag.MessageCheck</span>
                     </div>
                 </div>
@@ -68,7 +68,17 @@
                 </div>
 
 
-                <input type="submit" value="ورود" class="btn btn-primary " />
+
+                <div class="form-group row">
+                    <div class="control-label col-sm-2" ></div>
+
+                    <div class="col-sm-10">
+                        <input type="submit" value="ورود" class="btn btn-primary " />
+                  
+                    </div>
+                </div>
+
+
 
 
             </div>
