--- a/Main/Css/Order/OrderCustomer.css
+++ b/Main/Css/Order/OrderCustomer.css
@@ -1,4 +1,36 @@
-﻿        .basket-header {
+﻿
+        .flip-card {
+            position: relative;
+        }
+
+            .flip-card .isFlipped {
+                transform: rotateY(180deg);
+                transform-style: preserve-3d;
+            }
+
+        .flip-card-front {
+            z-index: 2;
+            margin-bottom: 16px;
+            transition: 2s;
+            position: relative;
+            backface-visibility: hidden;
+            transform-style: preserve-3d;
+        }
+
+        .flip-card-back {
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            transition: 2s;
+            position: absolute;
+            backface-visibility: hidden;
+            transform-style: preserve-3d;
+        }       
+
+
+
+ .basket-header {
             border: 1px solid #d8d8d8;
             padding: 7px;
             background: #fafafa;
