--- a/Main/Views/About/HamidJalalat.cshtml
+++ b/Main/Views/About/HamidJalalat.cshtml
@@ -92,8 +92,8 @@
 @foreach (var item in Model)
 {<br />
     <div class="card" >
-        <div class="card-header">
-            <h5 class="panel-title">
+        <div class="card-header" style="background-color:#4cd035;color:white">
+            <h5 class="panel-title"  >
                 @item.UserName
             </h5>
         </div>
