--- a/Main/Css/Order/OrderCustomer.css
+++ b/Main/Css/Order/OrderCustomer.css
@@ -20,8 +20,8 @@
         .flip-card-back {
             top: 0;
             left: 0;
-            /*width: 100%;
-            height: 100%;*/
+            width: 100%;
+            /*height: 100%;*/
             transition: 1s;
             position: absolute;
             backface-visibility: hidden;
@@ -53,7 +53,7 @@
 
         .scroll {
             direction: ltr;
-            max-height: 600px;
+            max-height: 800px;
             overflow-y: auto;
             overflow-y: scroll; /* Add the ability to scroll */
         }
