--- a/Main/Views/Order/OrederCustomer.cshtml
+++ b/Main/Views/Order/OrederCustomer.cshtml
@@ -68,12 +68,12 @@
                 <div class="card-deck " style="direction:rtl">
 
                     <div v-for="item in listProduct" v-show="selectedGroupProductId === null || item.GroupProductId == selectedGroupProductId">
-                        <div class="card flip-card" v-on:click="showproduct(item)" style="width: 13rem; ">
+                        <div class="card flip-card"  style="width: 13rem; ">
                         
                             <div style=" background-color:rgba(0,0,0,.075);">
                                 <div class="flip-card-front "
                                      v-bind:class="[item.isFlipped ? isFlippedCssClass : null]" style="background-color:white ;">
-                                    <img class="card-img-top" style="height:170px" v-bind:src="item.Image_url" alt="Card image cap">
+                                    <img class="card-img-top" style="height:170px" v-bind:src="item.Image_url" alt="Card image cap" v-on:click="showproduct(item)">
                                     <div class="card-body">
                                         <h5 class="card-title">{{item.Name}}</h5>
 
@@ -94,7 +94,7 @@
 
                                 <div class="flip-card-back "
                                      v-bind:class="[item.isFlipped ? null : isFlippedCssClass]" style="background-color:white; ">
-                                    <img class="card-img-top" style="height:170px" v-bind:src="item.Image_url" alt="Card image cap">
+                                    <img class="card-img-top" style="height:170px" v-bind:src="item.Image_url" alt="Card image cap" v-on:click="showproduct(item)">
                                     <div class="card-body">
                                         <h5 class="card-title">{{item.Name}}</h5>
 
