--- a/Main/Css/Order/OrderCustomer.css
+++ b/Main/Css/Order/OrderCustomer.css
@@ -9,8 +9,12 @@
             }
 
         .flip-card-front {
+              top: 0;
+            left: 0;
+             height: 99%;
+               width: 100%;
             z-index: 2;
-            margin-bottom: 16px;
+            /*margin-bottom: 16px;*/
             transition: 1s;
             position: relative;
             backface-visibility: hidden;
@@ -21,7 +25,7 @@
             top: 0;
             left: 0;
             width: 100%;
-            /*height: 100%;*/
+            height: 99.8%;
             transition: 1s;
             position: absolute;
             backface-visibility: hidden;
@@ -53,7 +57,7 @@
 
         .scroll {
             direction: ltr;
-            max-height: 800px;
+            max-height: 1000px;
             overflow-y: auto;
             overflow-y: scroll; /* Add the ability to scroll */
         }
