--- a/Main/Views/About/HamidJalalat.cshtml
+++ b/Main/Views/About/HamidJalalat.cshtml
@@ -73,7 +73,7 @@
 
         <div class="col-sm-12">
             <div class="box-textarea-container">
-                <div class="basket-header">
+                <div class="basket-header" style="background-color:rgb(76, 208, 53);color:white">
                     <span class="icon-pencil-span"></span>    نظرات و پیشنهادات
                 </div>
                 <textarea v-model="description" id="text" maxlength="1024" name="text" placeholder="اگر پیشنهادی یا نظری دارید در این قسمت بنویسد . خوشحال خواهم شد."></textarea>
